# portal-hero-test

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: routes.py
app/core/: database.py
app/models/: product.py
app/services/: parser.py  repository.py  sync.py
app/utils/: file_reader.py  validators.py
core/: database.py
models/: product.py
samples/: feed_items.csv  portal_items.csv
services/: parser.py  repository.py  sync.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_csv.py  test_models.py  test_repository.py  test_sync.py  test_validators.py
utils/: file_reader.py  validators.py
