[tool.poetry]
name = "portal-hero-test"
version = "0.1.0"
description = "Portal Hero Test"
authors = ["Gustavo Tempel <gtempel@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"
psycopg2 = "^2.9.10"
fastapi = "^0.115.8"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
coverage = "^7.6.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
